chore: correct img size on mobile

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,3 +1,5 @@
+@import "../../app.scss";
+
 .hero {
   height: calc(100vh - 100px);
   background: linear-gradient(180deg, #0c0c1d, #111132);
@@ -17,6 +19,14 @@
       justify-content: center;
       gap: 40px;
 
+      @include mobile {
+        height: 50%;
+        width: 100%;
+        gap: 20px;
+        align-items: center;
+        text-align: center;
+      }
+
       h2 {
         font-size: 30px;
         color: rebeccapurple;
@@ -25,6 +35,10 @@
 
       h1 {
         font-size: 88px;
+
+        @include mobile {
+          font-size: 36px;
+        }
       }
 
       .buttons {
@@ -38,11 +52,25 @@
           margin-right: 20px;
           cursor: pointer;
           font-weight: 300;
+
+          @include mobile {
+            padding: 15px;
+            margin: 5px;
+          }
+        }
+
+        .contactMe {
+          color: black;
+          background-color: orange;
         }
       }
 
       img {
         width: 50px;
+
+        @include mobile {
+          width: 40px;
+        }
       }
     }
   }
@@ -52,8 +80,23 @@
     position: absolute;
     top: 50px;
     right: 10%;
-    border-radius: 100px;
+    border-radius: 20%;
     overflow: hidden;
     border: 1px solid rebeccapurple;
+
+    @include mobile {
+      height: 50%;
+      width: 100%;
+      border: none;
+      border-radius: 0;
+      top: unset;
+      bottom: 0;
+      right: 0;
+    }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+     }
   }
 }
